Fix horizontal scroll in Safari

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+main {
+  overflow-x: hidden;
+}
+
 h1, h2 {
   font-family: 'Knewave', cursive;
 }
